Add multer for file uploads and implement upload handling in root controller

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-ts-mongo-template",
   "version": "0.1.0",
   "private": true,
+  "description": "Template for express/typescript/mongodb Combo",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
@@ -20,6 +21,7 @@
     "mongoose": "^8.6.1",
     "mongoose-easy-paginate": "^0.0.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.7.5",
     "zod": "^3.23.8"
   },
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.30",
     "tsx": "^4.19.2",
     "typescript": "^5.4.5"
